assets/css/main.scss
---
---
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
$sans-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
$global-font-family: $sans-serif !default;


@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}";
@import "minimal-mistakes";

p {
  text-align: justify;
}

.sidebar p {
  text-align: left !important;
}

/* Sidebar, Header, Footer Config */
.sidebar,
.author__avatar,
.author__content,
.author__urls-wrapper {
  opacity: 1;
  transition: none;
}

.greedy-nav {
  background-color: #191919;
}

.page__content {
  font-size: 18px;
  line-height: 1.6;
}

/* Headers & Body */
h1, h2, h3, h4 {
  color: #f5f5f5;
  font-weight: bold;
}

body {
  background-color: #191919;
  color: #e6e6e6;
}

/* Code Blocks */
pre, code {
  background-color: #191919;
  border: 1px solid #2a2a2a;
  color: #eaeaea;
}

/* Muted Text */
p, li {
  color: #e6e6e6;
}

/* Page Header */
.masthead__menu {
  margin-left: 0 !important;
  ul {
    justify-content: flex-start !important;
  }
}

.greedy-nav .visible-links a:before {
  background: none;
}

/* Archive Item Tags */
.archive__item-tags {
  font-size: 0.75em;
  color: #f5f5f5;
  margin-top: 0.5rem;

  .page__taxonomy-item {
    padding: 2px 8px;
    border-radius: 4px;
    margin-right: 5px;
  }
}

/* Search Icon */
.search__toggle {
  color: #f5f5f5 !important;
}

.search__toggle:hover {
  color: #bbbbbb !important;
}

/* Links */
a { 
  color: #f5f5f5; 
}

a:any-link {
  text-decoration-line: none;
}

a:visited { 
  color: #f5f5f5; 
}

a:hover { 
  color: #bbbbbb; 
  outline: 0;
}

/* Global Transitions */
b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a, tr, td, form button, input[type="submit"], .btn, .highlight, .archive__item-teaser { 
  -webkit-transition: none; 
  transition: none; 
}

